testsuite/vhdl/syntax/test_data/label_mismatch/009_mixed.expected
label_mismatch/009_mixed:4:1: syntax error: Label mismatch in Entity Declaration
entity testbench is
       ~~~~~~~~~ <<-- here
...
end entity test_bench; -- testbench vs. test_bench
           ~~~~~~~~~~ <<-- and here
label_mismatch/009_mixed:7:1: syntax error: Label mismatch in Architecture Body
architecture BENCH of testbench is
             ~~~~~ <<-- here
...
end architecture bench_test; -- BENCH vs. bench_test
                 ~~~~~~~~~~ <<-- and here
label_mismatch/009_mixed:11:3: syntax error: Label mismatch in Process Statement
  Stimuli: process
  ~~~~~~~ <<-- here
...
end process Stim; -- Stimuli vs. Stim
            ~~~~ <<-- and here
